Completed key extensions functionality
